--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,10 @@
 .Navbar {
-  border: 1px solid;
+  /*border: 1px solid;*/
   padding: 5px;
   text-align: center;
   display: flex;
   align-items: center;
+  background-color: black;
 }
 
 .Logo {
@@ -12,7 +13,7 @@
 
 .NavList {
   width: 30%;
-  list-style-type: none;
+  list-style: none;
   display: flex;
   justify-content: space-around;
 }
@@ -20,6 +21,16 @@
 .NavList li {
   cursor: pointer;
 }
-.NavList li:hover {
-  color: blue;
+
+.NavList li a {
+  color: white;
+  text-decoration: none;
 }
+
+.NavList li a:hover {
+  text-decoration: underline;
+}
+
+/* .NavList li:hover {
+  color: blue;
+} */
