--- a/src/components/Section/Card/Card.css
+++ b/src/components/Section/Card/Card.css
@@ -1,6 +1,13 @@
 .Card {
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   height: 150px;
   padding: 5px;
-  width: 25%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: all 0.2s ease-in-out;
+}
+
+.Card:hover {
+  transform: scale(1.2);
 }
